--- a/resources/index.html
+++ b/resources/index.html
@@ -16,7 +16,11 @@
 </head>
 
 <body>
-
+    <header>
+        <div class="hero-text-box">
+            
+        </div>
+    </header>
 </body>
 
 </html>
