--- a/resources/index.html
+++ b/resources/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="../vendours/css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Proleto Filme</title>
+    <title>Projeto Filme</title>
 </head>
 
 <body>
