--- a/resources/index.html
+++ b/resources/index.html
@@ -20,8 +20,8 @@
         <div class="hero-text-box">
             <h1>Adeus fast food do mal. <br>
                 Olá comida saúdavel do bem</h1>
-            <a class="btn btn-full" href="#">Comprar Agora.</a>
-            <a class="btn btn-ghost" href="#">Mais Informações.</a>
+            <a class="btn btn-full" href="#">Comprar Agora</a>
+            <a class="btn btn-ghost" href="#">Mais Informações</a>
         </div>
     </header>
 </body>
