--- a/resources/index.html
+++ b/resources/index.html
@@ -17,6 +17,15 @@
 
 <body>
     <header>
+        <nav>
+            <img class="logo" src="img/film-solid.svg">
+            <ul class="main-nav">
+                <li><a href="#">Tele-entrega</a></li>
+                <li><a href="#">Cidades Atendidas</a></li>
+                <li><a href="#">Funcionamento</a></li>
+                <li><a href="#">Inscrever-se</a></li>
+            </ul>
+        </nav>
         <div class="hero-text-box">
             <h1>Adeus fast food do mal. <br>
                 Olá comida saúdavel do bem</h1>
