--- a/resources/index.html
+++ b/resources/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
         <div class="hero-text-box">
-            <h1>Adeus fast food do mal. <br>
+            <h1>Adeus fast food do mal <br>
                 Olá comida saúdavel do bem</h1>
             <a class="btn btn-full" href="#">Comprar Agora</a>
             <a class="btn btn-ghost" href="#">Mais Informações</a>
