--- a/resources/index.html
+++ b/resources/index.html
@@ -11,6 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../vendours/css/normalize.css">
+    <link rel="stylesheet" href="../vendours/css/grid.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Projeto Filme</title>
 </head>
@@ -33,6 +34,12 @@
             <a class="btn btn-ghost" href="#">Mais Informações</a>
         </div>
     </header>
+    <div class="row">
+        <div class="col span-1-of-4">1</div>
+        <div class="col span-1-of-4">2</div>
+        <div class="col span-1-of-4">3</div>
+        <div class="col span-1-of-4">4</div>
+    </div>
 </body>
 
 </html>
