--- a/resources/index.html
+++ b/resources/index.html
@@ -34,12 +34,22 @@
             <a class="btn btn-ghost" href="#">Mais Informações</a>
         </div>
     </header>
+    <!--
     <div class="row">
-        <div class="col span-1-of-4">1</div>
+        <div class="col span-2-of-4">1</div>
         <div class="col span-1-of-4">2</div>
         <div class="col span-1-of-4">3</div>
-        <div class="col span-1-of-4">4</div>
     </div>
+    -->
+    <section class="section-features">
+        <div class="row">
+            <h2>Solução rápida e saudável &mdash; Não apenas rápida</h2>
+            <p class="long-copy"> Nós da saúde no prato queremos prover a você uma experiência incrivelmente deliciosa e
+                saudável.
+                Pois entendemos que nem todo mundo tem tempo suficiente ou interesse em cozinhar, mas não é por
+                isso que as pessoas devem deixar de se alimentar bem</p>
+        </div>
+    </section>
 </body>
 
 </html>
