--- a/resources/index.html
+++ b/resources/index.html
@@ -42,7 +42,7 @@
     </div>
     -->
     <section class="section-features">
-        <div class="row">
+        <div class="row pitch">
             <h2>Solução rápida e saudável &mdash; Não apenas rápida</h2>
             <p class="long-copy"> Nós da saúde no prato queremos prover a você uma experiência incrivelmente deliciosa e
                 saudável.
