--- a/resources/index.html
+++ b/resources/index.html
@@ -49,7 +49,35 @@
                 Pois entendemos que nem todo mundo tem tempo suficiente ou interesse em cozinhar, mas não é por
                 isso que as pessoas devem deixar de se alimentar bem</p>
         </div>
+        <div class="row features">
+            <div class="col span-1-of-4">
+                <ion-icon name="infinite-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non
+                    porttitor.
+                    Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+            </div>
+            <div class="col span-1-of-4">
+                <ion-icon name="alarm-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non
+                    porttitor.
+                    Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+            </div>
+            <div class="col span-1-of-4">
+                <ion-icon name="pizza-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non
+                    porttitor.
+                    Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+            </div>
+            <div class="col span-1-of-4">
+                <ion-icon name="card-outline"></ion-icon>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non
+                    porttitor.
+                    Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+            </div>
+        </div>
     </section>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
