--- a/resources/index.html
+++ b/resources/index.html
@@ -52,24 +52,28 @@
         <div class="row features">
             <div class="col span-1-of-4">
                 <ion-icon name="infinite-outline"></ion-icon>
+                <h3>Aberto 24h!</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non
                     porttitor.
                     Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
             </div>
             <div class="col span-1-of-4">
                 <ion-icon name="alarm-outline"></ion-icon>
+                <h3>Pronto em 15 min</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non
                     porttitor.
                     Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
             </div>
             <div class="col span-1-of-4">
                 <ion-icon name="pizza-outline"></ion-icon>
+                <h3>100% organico</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non
                     porttitor.
                     Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
             </div>
             <div class="col span-1-of-4">
                 <ion-icon name="card-outline"></ion-icon>
+                <h3>Aceitamos carões</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non
                     porttitor.
                     Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
