--- a/resources/index.html
+++ b/resources/index.html
@@ -80,6 +80,50 @@
             </div>
         </div>
     </section>
+    <section class="section-photos">
+        <ul class="imagem-showcase">
+            <li>
+                <figure class="photos">
+                    <img src="img/1.jpg" alt="Foto 1 de comida" title="Nome da comida">
+                </figure>
+            </li>
+            <li>
+                <figure class="photos">
+                    <img src="img/2.jpg" alt="Foto 2 de comida" title="Nome da comida">
+                </figure>
+            </li>
+            <li>
+                <figure class="photos">
+                    <img src="img/3.jpg" alt="Foto 3 de comida" title="Nome da comida">
+                </figure>
+            </li>>
+            <li>
+                <figure class="photos">
+                    <img src="img/4.jpg" alt="Foto 4 de comida" title="Nome da comida">
+                </figure>
+            </li>
+            <li>
+                <figure class="photos">
+                    <img src="img/5.jpg" alt="Foto 5 de comida" title="Nome da comida">
+                </figure>
+            </li>
+            <li>
+                <figure class="photos">
+                    <img src="img/6.jpg" alt="Foto 6 de comida" title="Nome da comida">
+                </figure>
+            </li>
+            <li>
+                <figure class="photos">
+                    <img src="img/7.jpg" alt="Foto 7 de comida" title="Nome da comida">
+                </figure>
+            </li>
+            <li>
+                <figure class="photos">
+                    <img src="img/8.jpg" alt="Foto 8 de comida" title="Nome da comida">
+                </figure>
+            </li>
+        </ul>
+    </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
