--- a/resources/index.html
+++ b/resources/index.html
@@ -81,7 +81,7 @@
         </div>
     </section>
     <section class="section-photos">
-        <ul class="imagem-showcase">
+        <ul class="image-showcase">
             <li>
                 <figure class="photos">
                     <img src="img/1.jpg" alt="Foto 1 de comida" title="Nome da comida">
@@ -96,7 +96,7 @@
                 <figure class="photos">
                     <img src="img/3.jpg" alt="Foto 3 de comida" title="Nome da comida">
                 </figure>
-            </li>>
+            </li>
             <li>
                 <figure class="photos">
                     <img src="img/4.jpg" alt="Foto 4 de comida" title="Nome da comida">
